# recall

./: .gitignore  AGENTS.md  Cargo.toml  README.md
capture-helper/: Package.swift  README.md
capture-helper/Sources/RecallCapture/: main.swift
docs/: AGENDA.md  AGENT_ANALYSIS.md  AUDIO_CAPTURE.md  DEPENDENCIES.md  FIRST_SESSION_TEST.md  GIT_PRIVACY_CHECKLIST.md  PORTABILITY.md  ROADMAP.md  SETUP.md  SPEC.md  TRANSCRIPTION.md
src/: analysis.rs  capture_sources.rs  config.rs  main.rs  mic_recorder.rs  session.rs  system_recorder.rs  transcription.rs  tui.rs
