[package]
name = "recall"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Local-first macOS meeting memory from the terminal."

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["local-offset"] }
